[package]
name = "integration-testing"
version = "0.1.0"
authors = ["Guy Garcia <guysebastiangarcia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
colored = "2.0.0"
chrono = "0.4.19"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.67" }
getrandom = { version = "0.2", features = ["js"] } # Prevents wasm from freaking out when running make
rand = { version = "0.8.4"}
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }

shade-protocol = { git = "https://github.com/securesecrets/shade", branch = "dev", features = ["utils"] }
secretcli = { git = "https://github.com/securesecrets/shade", branch = "dev" }
rs_merkle = { git = "https://github.com/FloppyDisck/rs-merkle", branch = "node_export" }
flexible-permits = {git = "https://github.com/securesecrets/flexible-permits", tag = "v1.1.0"}

# Contracts
permits = { version = "0.1.0", path = "../contracts/permits" }
storage = { version = "0.1.0", path = "../contracts/storage" }
